pre whitespace fix

--- a/css/style.css
+++ b/css/style.css
@@ -40,3 +40,7 @@ textarea#code, pre {
 	z-index: 0 !important;
     font-family: Consolas, "Courier New", monospace !important;
 }
+
+pre {
+	whitespace: pre !important;
+}
